--- a/_posts/kutis/2019-10-10-part-two.md
+++ b/_posts/kutis/2019-10-10-part-two.md
@@ -5,50 +5,73 @@ categories: [kutis]
 
 **Liebe Kutis,**
 
-Seit 3 Wochen in die Karibik....
+Anfang Oktober habe ich Felix in der Karibik wieder getroffen. Er war seit ende August in Europa wegen Hochzeiten von Freunden von him. Ich war aber die ganze Zeit in Kanada, in Montreal immer noch, wo ich Besuch bekommen habe. 
+Dann bin ich mitte September nach Canmore ~~gefahren~~ geflogen. 
+Canmore ist in Alberta, ungefaehr 3500Km westlich von Montreal. Dort habe ich bei einem Freund von Felix gewohnt (der lustigerweise auch Felix heisst :D). Er ist Deutscher und ist nach Kanada vor 3 Jahre fuer die Arbeit umgezogen und ist dort fuer eine Frau geblieben ;) Er ist auch Informatiker und kann auch remote arbeiten, es war Perfekt, wir hatten der gleichen Rythmus. Es gibt in Canmore eine sehr coole Coworking Space von wo wir jeden Tag gearbeitet haben. Am Wochenende waren wir oft Wandern und/oder draussen klettern! Es hat sehr viel spass gemacht, auch wenn es manchmal ein bisschen gruselig war. Ich hatte, wie Svenja manchmal, kurz Angst :)
+Hier ein paar Fotos noch von Kanada:
+
+Wohnung in Canmore
+Co-working Space in Canmore
+Wanderung in Canmore
+Climbing in Canmore
+Urlaub in Gaspesie
+
+Nun bin ich seit Anfang Oktober, von Gefuehl, in einem andern Welt: auf la Guadeloupe. Kennt ihr diese Insel? Die gehoert Frankreich, d.h hier bin ich eig. in Europa (mehr Info: https://de.wikipedia.org/wiki/Guadeloupe). Es ist Truamhaft schoen und uns geht es ganz gut!
 
 
 # Wo wohnst du gerade? 
+Der Insel sieht wie einen Schmetterling aus
+[photo]
+und wir wohnen im moment auf der Rechte Fluegel ganz unten, 5mn entfernt vom Meer so dass wir jeden Abend nach der Arbeit ins Meer springen koennen. Das Ziel ist aber mitte November auf der andere Seite umzuziehen. Die 2 Seiten sind ziemlich anders und Fred hat mir empfohlen beide Seiten zu probieren. Fred ist ein Freud von mir der 7 Jahre lang hier gewohnt hat. Jetzt wohnt er wieder in Nantes aber er hat mir viele von seinen Kontakten hier gegeben. Kattie&Lionel sind 2 davon und die mieten uns eine Wohnung, die so aussieht:
+
+[video von der Wohnung]
+
+Man kann merken dass es gar keine Fenster scheiben gibt :D Sowas braucht man hier einfach nicht!
+Die Wohnung ist klein aber Fein! 
+Naechste Step ist aber eine Wohnung entweder mit Pool oder mit Meer aussicht. 
+Wir arbeiten von zu Hause (aus der Terrasse) aber wir werden bald das Coworking Space ausprobieren.
+Hier lebt man mit der Sonne und die Huehne (die hier ueberall frei rum laufen): also um 6Uhr aufstehen und um 22Uhr ins Bett. Um 6Uhr abends ist eh komplett dunkel. Zum Glueck gibt es hier in der Naehe ein Strand was geleuchtet ist, d.h man kann auch nach 18Uhr baden gehen :)
+
 
 ![useful image]({{ site.url }}/assets/wohnung.jpg)
-![useful image]({{ site.url }}/assets/wohnung1.jpg)
 
 
 # Machst du sport? JA!
+Alles hat in Montreal angefangen. Wir haben nach einem Sport gesucht, was wir, Felix und ich, zusammen machen konnten. Wir haben uns bei einem "Zirkus" Training angemeledet, besonders fuer Tuch und ???. 
+[photos]
+Es hat sehr viel spass gemacht! Die Trainerin war echt Nett und als ich erzaehlt habe dass ich nach la Guadeloupe umziehen werde hat sie mir dort eine Trapeze Schule empfohlen! Ich habe die direkt kontaktiert und nun sind wir jetzt Trapeze Artisten :D
+[photos/videos]
 
-Aussicht vom Mont Royal
-![useful image]({{ site.url }}/assets/MontRoyal.jpg) 
-![useful image]({{ site.url }}/assets/Handstand_schwimmbad.jpg)
-Cirque du Soleil
-![useful image]({{ site.url }}/assets/cds.jpg)
-![useful image]({{ site.url }}/assets/cds1.jpg)
+Und ich habe mich auch angemeldet fuer Kite Surf Kurse und warte auf eine Rueckmeldung.
 
+Joggen geht ihr nicht so gut. Snorkeling aber sehr gut :D und zaehlt auch ein bisschen als Sport oder? Also letztens sind wir 2 Stunden lang im Wasser geblieben, es war anstrengend :p
 
 # Wie ist das Essen? MEGA!
+Es gibt hier viel Reis und Linsen mit hauptsaeschlich Fisch oder Huehne (die die frei rumlaufen :p)
+Kokos gibt es auch viel. Im Cocktail, als Eis, als Wasser...
+Kochbanene gibt es auch viele, und suesskartoffeln.
+Und natuerlich gibt es auch viele exotische Fruechte wie Ananas, Melone, Bananen
 
-![useful image]({{ site.url }}/assets/mapleSirup.jpg)
-![useful image]({{ site.url }}/assets/wafel.jpg)
-
+[Avocado Foto]
+[fruecht Foto]
 
 # Wo wart ihr unterwegs?
+Bis jetzt waren wir nur auf der Rechte Seite vom Insel unterwegs. Dafuer aber schon fast ueberall. Wir haben viele Straende ausprobiert und lustige Ort wie "la douche" (siehe Fotos) oder schoene Orte wie "pointe des chateaux" oder "pointe de la grande Viggie" (siehe auch Fotos)
 
-# Ist cool auf einen Insel zu wohnen? JA!
+[photo]
 
-![useful image]({{ site.url }}/assets/natur.jpg)
-![useful image]({{ site.url }}/assets/natur1.jpg)
-Wild Camping
-![useful image]({{ site.url }}/assets/wildCamping.jpg)
-Zimmer mit Aussischt
-![useful image]({{ site.url }}/assets/morgen.jpg)
-![useful image]({{ site.url }}/assets/stark.jpg)
-
+# Ist cool auf einen Insel zu wohnen? Bis jetzt, JA!
+Die Leute sind hier sehr Nett und freuen sich uns die Insel zu "zeigen". 
 
 # What's next?
+Meine Eltern fliegen hier rueber fuer Wiehnachten und Neujahr deswegen werden wir hier bist mind. Anfang Januar bleiben. 
+Wir wollten dann im Januar mit Felix eventuell Urlaub machen (Costa Rica oder Panama) und dann nach Santiago de Chili umziehen fuer 3 Monaten, aber es kann sein dass wir doch nach San Francisco von Januar bis Maerz mussen, fuer Felix's Arbeit. Das wird sich bald kaleren.
+Mai&Juni sind wir aber in Europa! :) 
+Anfang Mai bin ich auf die Taufe meine Nichte in Frankreich (ich werde PatenTante) und mitte Juni bin ich auf die Hochzeit meine Cousine!
+Da zwischen werde ich auf jeden Fall nach Aachen kommen, ich melde mich auf jeden Fall wenn es soweit ist!
 
 # Handstand?
-![useful image]({{ site.url }}/assets/handstand.jpg)
-![useful image]({{ site.url }}/assets/handstandWasser.jpg)
 
-Sonnige Gruesse, Tiphi(e)
+Karibische Gruesse - aber ohne Rum -, Tiphi(e)
 
 
