--- a/_posts/kutis/2019-10-10-part-two.md
+++ b/_posts/kutis/2019-10-10-part-two.md
@@ -5,6 +5,9 @@ categories: [kutis]
 
 **Liebe Kutis,**
 
+![useful image]({{ site.url }}/assets/Guadeloupe/avocado.gif)
+
+
 Anfang Oktober habe ich Felix in der Karibik wieder getroffen. Er war seit ende August in Europa wegen Hochzeiten von Freunden von him. Ich war aber die ganze Zeit in Kanada, in Montreal immer noch, wo ich Besuch bekommen habe. 
 Dann bin ich mitte September nach Canmore ~~gefahren~~ geflogen. 
 Canmore ist in Alberta, ungefaehr 3500Km westlich von Montreal. Dort habe ich bei einem Freund von Felix gewohnt (der lustigerweise auch Felix heisst :D). Er ist Deutscher und ist nach Kanada vor 3 Jahre fuer die Arbeit umgezogen und ist dort fuer eine Frau geblieben ;) Er ist auch Informatiker und kann auch remote arbeiten, es war Perfekt, wir hatten der gleichen Rythmus. Es gibt in Canmore eine sehr coole Coworking Space von wo wir jeden Tag gearbeitet haben. Am Wochenende waren wir oft Wandern und/oder draussen klettern! Es hat sehr viel spass gemacht, auch wenn es manchmal ein bisschen gruselig war. Ich hatte, wie Svenja manchmal, kurz Angst :)
@@ -24,7 +27,6 @@ Der Insel sieht wie einen Schmetterling aus
 [photo]
 und wir wohnen im moment auf der Rechte Fluegel ganz unten, 5mn entfernt vom Meer so dass wir jeden Abend nach der Arbeit ins Meer springen koennen. Das Ziel ist aber mitte November auf der andere Seite umzuziehen. Die 2 Seiten sind ziemlich anders und Fred hat mir empfohlen beide Seiten zu probieren. Fred ist ein Freud von mir der 7 Jahre lang hier gewohnt hat. Jetzt wohnt er wieder in Nantes aber er hat mir viele von seinen Kontakten hier gegeben. Kattie&Lionel sind 2 davon und die mieten uns eine Wohnung, die so aussieht:
 
-[video von der Wohnung]
 
 Man kann merken dass es gar keine Fenster scheiben gibt :D Sowas braucht man hier einfach nicht!
 Die Wohnung ist klein aber Fein! 
@@ -33,7 +35,7 @@ Wir arbeiten von zu Hause (aus der Terrasse) aber wir werden bald das Coworking 
 Hier lebt man mit der Sonne und die Huehne (die hier ueberall frei rum laufen): also um 6Uhr aufstehen und um 22Uhr ins Bett. Um 6Uhr abends ist eh komplett dunkel. Zum Glueck gibt es hier in der Naehe ein Strand was geleuchtet ist, d.h man kann auch nach 18Uhr baden gehen :)
 
 
-![useful image]({{ site.url }}/assets/wohnung.jpg)
+<iframe width="420" height="315" src="{{ site.url }}/assets/Guadeloupe/wohnung.mp4" frameborder="0" allowfullscreen></iframe>
 
 
 # Machst du sport? JA!
@@ -42,7 +44,9 @@ Alles hat in Montreal angefangen. Wir haben nach einem Sport gesucht, was wir, F
 Es hat sehr viel spass gemacht! Die Trainerin war echt Nett und als ich erzaehlt habe dass ich nach la Guadeloupe umziehen werde hat sie mir dort eine Trapeze Schule empfohlen! Ich habe die direkt kontaktiert und nun sind wir jetzt Trapeze Artisten :D
 [photos/videos]
 
-Und ich habe mich auch angemeldet fuer Kite Surf Kurse und warte auf eine Rueckmeldung.
+Wir waren auch bouldern hier. Dort haben 2 Deutsche kennen gelernt, die hier Erasmus machen! Guadeloupe ist ja Frankreich :D Der eine kommt sogar aus Aachen under andere aus Muenster.
+
+Und ich habe mich auch fuer Kite Surf Kurse angemeldet!
 
 Joggen geht ihr nicht so gut. Snorkeling aber sehr gut :D und zaehlt auch ein bisschen als Sport oder? Also letztens sind wir 2 Stunden lang im Wasser geblieben, es war anstrengend :p
 
@@ -56,11 +60,15 @@ Und natuerlich gibt es auch viele exotische Fruechte wie Ananas, Melone, Bananen
 [fruecht Foto]
 
 # Wo wart ihr unterwegs?
-Bis jetzt waren wir nur auf der Rechte Seite vom Insel unterwegs. Dafuer aber schon fast ueberall. Wir haben viele Straende ausprobiert und lustige Ort wie "la douche" (siehe Fotos) oder schoene Orte wie "pointe des chateaux" oder "pointe de la grande Viggie" (siehe auch Fotos)
+Bis jetzt waren wir nur auf der "Rechte" Seite vom Insel unterwegs. Dafuer aber schon fast ueberall. Wir haben viele Straende ausprobiert und lustige Ort wie "la douche" (siehe Fotos) oder schoene Orte wie "pointe des chateaux" oder "pointe de la grande Viggie" (siehe auch Fotos) besucht.
+Wir haben auch ein Tag auf eine kleine Insel verbracht, dort konnte man mit Schildkroeten schwimmen!!
+
+Ab mitte November wollen wir auf der andere Seite vom Insel wohnen.
+Und wenn meinen Eltern da sind dann wandern wir auf dem Vulkan hoch :)
 
 [photo]
 
-# Ist cool auf einen Insel zu wohnen? Bis jetzt, JA!
+# Ist es cool auf einen Insel zu wohnen? Bis jetzt, JA!
 Die Leute sind hier sehr Nett und freuen sich uns die Insel zu "zeigen". 
 
 # What's next?
@@ -72,6 +80,6 @@ Da zwischen werde ich auf jeden Fall nach Aachen kommen, ich melde mich auf jede
 
 # Handstand?
 
-Karibische Gruesse - aber ohne Rum -, Tiphi(e)
+Karibische Gruesse - mit Rum -, Tiphi(e)
 
 
